fix error word